sumo/tests/traci/Scenario/DomRoadMap/InvalidObjectID/testclient_out.traci
TraCITestClient output file. Date: Tue Feb 03 22:52:59 2009


-> Command sent: <SimulationStep>:
  TargetTime=1 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <Scenario>:
  flag=0 domain=0 domainId=-1 variable=9 valueDataType=0 [no value sent]
.. Answered with error to command (115), [description: Invalid object id specified]

-> Command sent: <SimulationStep>:
  TargetTime=2 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
